# codegen-template

./: Cargo.toml
codegen/: Cargo.toml
codegen-impl/: Cargo.toml
codegen-impl/src/: lib.rs
codegen-impl/tests/data/: robust_test.rs
codegen-macro/: Cargo.toml
codegen/src/: lib.rs
example-build/: Cargo.toml
example-macro/: Cargo.toml
